--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,16 @@
+</main>
 
+<footer>
+
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top bg-dark" data-bs-theme="dark">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0" style="color: #D6D9DB ;">© 2025 Girish Dhakar</span>
+      </div>
+    </footer>
+</footer>
+</body>
+
+</html>
